# ArashMagicBox

./: CMakeLists.txt  LICENSE  Readme.md
NasalModel/: CMakeLists.txt  NasalModel.py
NasalModel/Resources/UI/: NasalModel.ui
gui/: CMakeLists.txt  gui.py
gui/Resources/UI/: gui.ui
